tests/invalid/unresolved_symbol.ar
fn main() {
    const a = b;
}
